<resources>
    <string name="app_name">Chess</string>
    <string name="title_activity_main">Chess</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_matchmaking">Matchmaking</string>
    <string name="title_game">Game</string>
    <string name="title_profile">Profile</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_play">Play</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_play_public">Play public game</string>
    <string name="title_play_ranked">Ranked game</string>
    <string name="title_play_with_bot">Play with bot</string>
    <string name="main_menu">Main menu</string>
    <string name="show_move_history">Move history</string>
    <string name="title_game_history_list">Game History List</string>

    <string name="total_games">Total games: %1$d</string>
    <string name="title_login">login</string>
    <string name="access_token">PREFERENCE_ACCESS_TOKEN</string>
    <string name="refresh_token">PREFERENCE_REFRESH_TOKEN</string>
    <string name="title_username">Username</string>
    <string name="password">Password</string>
</resources>