<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_login">

    <fragment
        android:id="@+id/navigation_matchmaking"
        android:name="com.xoka74.chess.ui.chess.matchmaking.MatchmakingFragment"
        android:label="@string/title_matchmaking"
        tools:layout="@layout/fragment_matchmaking" >
        <action
            android:id="@+id/action_navigation_matchmaking_to_gameFragment"
            app:destination="@id/navigation_game" />
        <action
            android:id="@+id/action_navigation_matchmaking_to_navigation_play"
            app:destination="@id/navigation_play" />
    </fragment>
    <fragment
        android:id="@+id/navigation_game"
        android:name="com.xoka74.chess.ui.chess.game.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_game" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.xoka74.chess.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_gameHistoryListFragment"
            app:destination="@id/navigation_game_history_list"
            app:popEnterAnim="@anim/swipe_left_to_right"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_play"
        android:name="com.xoka74.chess.ui.play.PlayFragment"
        android:label="@string/title_play"
        tools:layout="@layout/fragment_play" >
        <action
            android:id="@+id/action_navigation_play_to_navigation_matchmaking"
            app:destination="@id/navigation_matchmaking" />
    </fragment>
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.xoka74.chess.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_game_history_list"
        android:name="com.xoka74.chess.ui.profile.history_list.GameHistoryListFragment"
        android:label="@string/title_game_history_list"
        tools:layout="@layout/fragment_game_history_list" >
        <action
            android:id="@+id/action_gameHistoryListFragment_to_navigation_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_gameHistoryListFragment_to_gameHistoryFragment"
            app:destination="@id/navigation_game_history" />
    </fragment>
    <fragment
        android:id="@+id/navigation_game_history"
        android:name="com.xoka74.chess.ui.profile.history.GameHistoryFragment"
        android:label="fragment_game_history"
        tools:layout="@layout/fragment_game_history" >
        <action
            android:id="@+id/action_gameHistoryFragment_to_gameHistoryListFragment"
            app:destination="@id/navigation_game_history_list" />
    </fragment>
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.xoka74.chess.ui.auth.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_play"
            app:destination="@id/navigation_play"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="false"/>
    </fragment>
</navigation>